--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
     "mongodb": "^3.6.3",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {},
