--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7"
