--- a/frontend/my-cars/package.json
+++ b/frontend/my-cars/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@firebase/app": "^0.6.13",
     "@firebase/auth": "^0.16.1",
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "connected-react-router": "^6.8.0",
     "firebase": "^8.2.4",
+    "formik": "^2.2.6",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -20,7 +22,8 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
