--- a/frontend/my-cars/package.json
+++ b/frontend/my-cars/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.2.4",
     "formik": "^2.2.6",
     "history": "^4.10.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
